@@ -4,8 +4,10 @@
 
 2004-02-18  fabian
 
-	* Enhanced the [PTYTextView drawRect] to use dirty array more efficiently.
+	* Enhanced [PTYTextView drawRect] to use dirty array more efficiently.
 	* fixed a bug in save/restoreBuffer in VT100Screen.
+	* Optimized blinking
+	* Unfinished work on Find functions
 	
 2004-02-17  fabian
 
